feat(auth): use JWT tokens
